--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,7 @@ body {
 	color: rgb(142, 142, 142);
 	padding: 10px;
 	width: auto;
+	text-align: center;
 }
 #header ul {
 	text-align: center;
@@ -49,10 +50,7 @@ p#name {
 	text-align: center;
 	font-family:fantasy;
 	font-size: 48px;
-	margin-left: 100px;
-	margin-bottom: 0px;
-	margin-right: 100px;
-	margin-top: -80px;
+	margin: auto;
 	color: white;
 	text-shadow: 2px 2px 20px rgb(255, 255, 255);
 }
